# stickerradar-classifier

./: .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.yml  inference.py  pyproject.toml  serve_model.py  train.py
models/: clip_classifier.pth
